Changes for 2.2.3rc1

New features:
....IJ.... [ZBXNEXT-1889] made startup.sh and shutdown.sh scripts for Java gateway work in /bin/sh (asaveljevs)
.D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian and Japanese translations; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-7918] fixed value cache reporting more free space than actually available (wiper)
A.F....... [ZBX-7832] fixed screen item row- and colspans not being adjusted when reducing the size of a screen (Pavels)
........S. [ZBX-7620] improved error messaging and debug logging for VMware items (wiper)
........S. [ZBX-7897] fixed memory leak in trapper for log file items (Juris)
..F.....S. [ZBX-7872] removed discovery item prototype from calculation of required performace (NVPS) (igors)
........S. [ZBX-5778] removed counting items in queue if host is in maintenance with no data collection (igors)
..F.....I. [ZBX-7849] fixed not being able to save actions with a "Maintenance status" condition after upgrading from 2.0 (Pavels)
A......... [ZBX-6151] fixed graph prototype and trigger prototype validation so item prototypes are no longer allowed from multiple discovery rules and fixed graph and graph prototype update validation allowing to pass only 'gitemid' parameter without 'itemid' (Ivo)
........S. [ZBX-7737] fixed host inventory item update order to prevent database deadlocks (Juris)
........S. [ZBX-5804] added overflow/wrapping detection to calculated items (Juris)
........S. [ZBX-7659] fixed handling of hosts without any interfaces (Juris)
...G...... [ZBX-7740] fixed agent crash if logrt and log items are not supported (Andris)
...G...PS. [ZBX-6731] faster processing of log files by agent on Unix (Andris)
...G...PS. [ZBX-6729] faster processing of log files by agent on Microsoft Windows (Andris)
....IJ.... [ZBX-5379] added stale PID file detection for Java gateway (asaveljevs)